--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,16 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
+
+
+
+body {
+  font-family: 'Roboto Condensed', sans-serif;
+}
+
 .App {
   text-align: center;
+  background-color: #F1DDD2;
+  height: 2000px;
+  
 }
 
 .App-logo {
@@ -36,3 +47,19 @@
     transform: rotate(360deg);
   }
 }
+
+.links {
+  background-color: #dd9086;
+  padding: 10px;
+  font-size: 12px;
+}
+
+a:link {
+  color: 	#894532;
+  padding: 20px;
+  text-decoration: none;
+}
+a:visited {
+  color: 	#894532;
+}
+
