--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,18 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Limelight&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Montserrat:900&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Poppins&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Rubik:400,500,700&display=swap');
+
+
 
 
 
 
 
 body {
-  font-family: 'Roboto Condensed', sans-serif;
+  font-family: 'Rubik', sans-serif;
+  color: #894532;
 }
 
 .App {
@@ -56,7 +61,7 @@ body {
   background-color: #dd9086;
   padding: 10px;
   font-size: 12px;
-  font-weight: bold;
+  font-weight: 500;
 }
 
 a:link {
@@ -66,5 +71,9 @@ a:link {
 }
 a:visited {
   color: 	#894532;
+}
+
+label {
+  font-size: 20px ;
 }
 
