--- a/src/App.css
+++ b/src/App.css
@@ -13,12 +13,14 @@
 body {
   font-family: 'Rubik', sans-serif;
   color: #894532;
+  font-size: 18px;
 }
 
 .App {
   text-align: center;
   background-color: #FD9185;
-  height: 2000px;
+  min-height: 1600px;
+  padding-bottom: 200px;
   
 }
 
@@ -61,7 +63,7 @@ body {
   font-family: 'futura';
   background-color: #FD9185;
   padding: 10px;
-  font-size: 12px;
+  font-size: 14px;
   font-weight: 500;
 }
 
@@ -73,6 +75,9 @@ a:link {
 a:visited {
   color: 	#894532;
 }
+a:hover {
+  color: white;
+}
 
 label {
   font-size: 20px ;
@@ -82,3 +87,14 @@ label {
   background-color: white;
 }
 
+Input:focus {
+  outline-color: #894532;
+}
+
+.grow { 
+  transition: all .2s ease-in-out; 
+  }
+  
+.grow:hover { 
+  transform: scale(1.1); 
+}
