--- a/src/App.css
+++ b/src/App.css
@@ -98,3 +98,12 @@ Input:focus {
 .grow:hover { 
   transform: scale(1.1); 
 }
+
+
+footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 2.5rem;
+  background-color: white;
+}
